--- a/01_agama/dirgha/DA_10.md
+++ b/01_agama/dirgha/DA_10.md
@@ -32,7 +32,7 @@ The monks accepted his instructions and listened.
 6\. “Monks, there’s one thing to be achieved, one thing to be cultivated, one thing to be recognized, one thing to be ceased, one thing that retreats, one thing that advances, one thing that’s difficult to understand, one thing to produce, one thing to know, and one thing to be realized.
 {:#p6}
 
-7\. “What’s one thing to be achieved? Not being careless about good qualities. What’s one thing to be cultivated? Constant mindfulness of oneself.[\[4\]](#n4){:#ref4} What’s one thing to be recognized? Contaminated contact. What’s one thing to be ceased? The conceit of self. What’s one thing that retreats? Not contemplating the foul discharges. What’s one thing that advances? Contemplation of the foul discharges.[\[5\]](#n5){:#ref5} What’s one thing that’s difficult to understand? Uninterrupted samādhi. What’s one thing to produce? Liberation from being contaminated. What’s one thing to know? Sentient beings look to food for their subsistence. What’s one thing to be realized? The freedom of an unobstructed mind.
+7\. “What’s one thing to be achieved? Not being careless about good qualities. What’s one thing to be cultivated? Constant mindfulness of oneself.[\[4\]](#n4){:#ref4} What’s one thing to be recognized? Contaminated contact. What’s one thing to be ceased? The conceit of self. What’s one thing that retreats? Not contemplating the foul discharges. What’s one thing that advances? Contemplation of the foul discharges.[\[5\]](#n5){:#ref5} What’s one thing that’s difficult to understand? Uninterrupted <em>samādhi</em>. What’s one thing to produce? Liberation from being contaminated. What’s one thing to know? Sentient beings look to food for their subsistence. What’s one thing to be realized? The freedom of an unobstructed mind.
 {:#p7}
 
 #### The Twos
@@ -51,7 +51,7 @@ The monks accepted his instructions and listened.
 11\. “What are three things to be achieved? Making good friends, listening to the voice of Dharma, and accomplishing [consecutive] teachings.
 {:#p11}
 
-12\. “What are three things to be cultivated? The three samādhis: the samādhi of emptiness, the samādhi without attributes, and the samādhi without actions.
+12\. “What are three things to be cultivated? The three <em>samādhi</em>s: the <em>samādhi</em> of emptiness, the <em>samādhi</em> without attributes, and the <em>samādhi</em> without actions.
 {:#p12}
 
 13\. “What are three things to be recognized? The three feelings: painful feelings, pleasant feelings, and feelings that are neither painful nor pleasant.
@@ -127,7 +127,7 @@ The monks accepted his instructions and listened.
 35\. “What are five things to be achieved? The five factors of complete cessation: First is faith in the Buddha, Tathāgata, and Arhat who perfected the ten epithets. Second is having no illness and being at peace. Third is being honest and not deceptive about heading straight down the Tathāgata’s road to <em>nirvāṇa</em>. Fourth is mental focus that’s not confused and doesn’t forget the recitations. Fifth is skill in investigating the arising and cessation of things and ending the root of suffering with the noble practice.
 {:#p35}
 
-36\. “What are five things to be cultivated? The five faculties: the faculty of faith, faculty of effort, faculty of mindfulness, faculty of samādhi, and faculty of wisdom.
+36\. “What are five things to be cultivated? The five faculties: the faculty of faith, faculty of effort, faculty of mindfulness, faculty of <em>samādhi</em>, and faculty of wisdom.
 {:#p36}
 
 37\. “What are five things to be recognized? The five acquired aggregates: the acquired aggregate of form … feeling … conception … volition … the acquired aggregate of awareness.
@@ -139,22 +139,22 @@ The monks accepted his instructions and listened.
 39\. “What are five things that retreat? The five mental obstructions: First, a monk doubts the Buddha. Doubting the Buddha, he doesn’t befriend him. Not befriending him, he doesn’t respect him. This is the first mental obstruction. Second, a monk has practices that are penetrated by contaminants, practices that aren’t true, and practices that are defiled regarding the teaching … Third … <em>saṅgha</em> … Fourth … precepts … He doesn’t befriend the precepts and doesn’t respect them. This is the fourth mental obstruction. Fifth, a monk produces bad inclinations toward religious practitioners. His mind doesn’t delight in them, his words are harsh, and he criticizes them. This is the fifth mental obstruction.
 {:#p39}
 
-40\. “What are five things that advance? The five roots of joy: delight, mindfulness, calm, happiness, and samādhi.
+40\. “What are five things that advance? The five roots of joy: delight, mindfulness, calm, happiness, and <em>samādhi</em>.
 {:#p40}
 
-41\. “What are five things that are difficult to understand? The five entries to liberation: If a monk is diligent and not negligent, is happy living in seclusion, focus his attention, and unifies his mind, he’ll free what’s yet to be freed, end what’s yet to be ended, and calm what’s yet to be calmed. What are the five? [1] If a monk hears the Buddha teach Dharma, hears a teaching by a religious practitioner, or hears a teaching by a senior teacher, he considers, investigates, and discerns the teaching and its meaning, and his heart rejoices. Once he rejoices, he gains a love of Dharma. Once he gains a love of Dharma, his body and mind become peaceful. Once his body and mind are peaceful, he attains samādhi. Once he attains samādhi, he attains true knowledge. This is the first entry to liberation.
+41\. “What are five things that are difficult to understand? The five entries to liberation: If a monk is diligent and not negligent, is happy living in seclusion, focus his attention, and unifies his mind, he’ll free what’s yet to be freed, end what’s yet to be ended, and calm what’s yet to be calmed. What are the five? [1] If a monk hears the Buddha teach Dharma, hears a teaching by a religious practitioner, or hears a teaching by a senior teacher, he considers, investigates, and discerns the teaching and its meaning, and his heart rejoices. Once he rejoices, he gains a love of Dharma. Once he gains a love of Dharma, his body and mind become peaceful. Once his body and mind are peaceful, he attains <em>samādhi</em>. Once he attains <em>samādhi</em>, he attains true knowledge. This is the first entry to liberation.
 {:#p41}
 
-42\. “[2] Likewise, a monk who rejoices upon hearing the teaching does so when accepting, retaining, and reciting it. [3] He rejoices when explaining it for other people. [4] He rejoices when considering and discerning it. [5] He also rejoices when he attains samādhi with the teaching.
+42\. “[2] Likewise, a monk who rejoices upon hearing the teaching does so when accepting, retaining, and reciting it. [3] He rejoices when explaining it for other people. [4] He rejoices when considering and discerning it. [5] He also rejoices when he attains <em>samādhi</em> with the teaching.
 {:#p42}
 
-43\. “What are five things to produce? The noble person’s five knowledges regarding samādhi: The internal and external knowledge that arises from the present and future happiness of cultivating samādhi. The internal and external knowledge that arises from the noble person’s lack of craving. The internal and external knowledge that arises from the practices cultivated by Buddhas and noble people. The internal and external knowledge that arises from the state of tranquility while alone and without a companion. The internal and external knowledge that arises from entering and emerging from samādhi with a unified mind.
+43\. “What are five things to produce? The noble person’s five knowledges regarding <em>samādhi</em>: The internal and external knowledge that arises from the present and future happiness of cultivating <em>samādhi</em>. The internal and external knowledge that arises from the noble person’s lack of craving. The internal and external knowledge that arises from the practices cultivated by Buddhas and noble people. The internal and external knowledge that arises from the state of tranquility while alone and without a companion. The internal and external knowledge that arises from entering and emerging from <em>samādhi</em> with a unified mind.
 {:#p43}
 
 44\. “What are five things to know? The five spheres of escape: [1] First, A monk doesn’t enjoy, give attention to, or befriend desires. He’s only mindful of escaping them and enjoys being far from them. He befriends non-negligence and disciplines his mind. Escaping and being free of desires, the arising of contaminants caused by those desires is also entirely abandoned and ceased, and he becomes liberated. This is the escape from desire. <em>[2] The escape from anger, [3] escape from jealousy, [4] escape from form, and [5] escape from belief in the individual are likewise.</em>
 {:#p44}
 
-45\. “What are five things to be realized? The five collections of the adept: the adept’s collection of precepts, collection of samādhi, collection of wisdom, collection of liberation, and collection of knowing and seeing liberation.
+45\. “What are five things to be realized? The five collections of the adept: the adept’s collection of precepts, collection of <em>samādhi</em>, collection of wisdom, collection of liberation, and collection of knowing and seeing liberation.
 {:#p45}
 
 46\. “These fifty things are true and not false. They’ve been known by the Tathāgata who teaches the Dharma equally.
@@ -189,10 +189,10 @@ The monks accepted his instructions and listened.
 55\. “What are six things to be ceased? The six cravings: craving for sights, craving for sounds, craving for odors, craving for flavors, craving for touches, and craving for notions.
 {:#p55}
 
-56\. “What are six things that retreat? The six disrespects: disrespecting the Buddha, disrespecting the Dharma, disrespecting the Saṅgha, disrespecting the precepts, disrespecting samādhi, and disrespecting one’s parents.
+56\. “What are six things that retreat? The six disrespects: disrespecting the Buddha, disrespecting the Dharma, disrespecting the Saṅgha, disrespecting the precepts, disrespecting <em>samādhi</em>, and disrespecting one’s parents.
 {:#p56}
 
-57\. “What are six things that advance? The six respects: respecting the Buddha, respecting the Dharma, respecting the Saṅgha, respecting the precepts, respecting samādhi, and respecting one’s parents.
+57\. “What are six things that advance? The six respects: respecting the Buddha, respecting the Dharma, respecting the Saṅgha, respecting the precepts, respecting <em>samādhi</em>, and respecting one’s parents.
 {:#p57}
 
 58\. “What are six things difficult to understand? The six unsurpassed things: unsurpassed view, unsurpassed learning, unsurpassed support, unsurpassed precepts, unsurpassed respect, and unsurpassed memory.
@@ -221,7 +221,7 @@ The monks accepted his instructions and listened.
 65\. “What are seven things to be achieved? The seven kinds of wealth: wealth in faith, wealth in precepts, wealth in conscience, wealth in modesty, wealth in learning, wealth in generosity, and wealth in wisdom are the seven kinds of wealth.
 {:#p65}
 
-66\. “What are seven things to be cultivated? The seven awakenings: Here, a monk cultivates the awakening of mindfulness, which depends on being desireless, tranquil, and secluded. He cultivates the teaching … cultivates effort … cultivates joy … cultivates mildness … cultivates samādhi … cultivates equanimity, which depends on being desireless, tranquil, and secluded.
+66\. “What are seven things to be cultivated? The seven awakenings: Here, a monk cultivates the awakening of mindfulness, which depends on being desireless, tranquil, and secluded. He cultivates the teaching … cultivates effort … cultivates joy … cultivates mildness … cultivates <em>samādhi</em> … cultivates equanimity, which depends on being desireless, tranquil, and secluded.
 {:#p66}
 
 67\. “What are seven things to be recognized? The seven dwelling places of awareness: There are sentient beings of diverse bodies and diverse notions. These gods and humans are the first abode of awareness. Again, there are sentient beings of diverse bodies but the same notions. When the Brahmas of the Ābhāsvara Heaven are first born there, that’s the second abode of awareness. Again, there are sentient beings of the same bodies but diverse notions. These Ābhāsvara gods are the third abode of awareness. Again, there are sentient beings of the same bodies and the same notions. These Śubhakṛtsnā gods are the fourth abode of awareness. Again, there are sentient beings that dwell in the abode of space. This is the fifth abode of awareness. Some dwell in the abode of awareness. This is the sixth abode of awareness. Some are in the abode of nothingness. This is the seventh abode of awareness.
@@ -283,13 +283,13 @@ The monks accepted his instructions and listened.
 85\. “Also, he observes the arising and ceasing nature of the five acquired aggregates: ‘This is form, form’s coming together, and form’s cessation. This is feeling … conception … volition … awareness, awareness’s coming together, and awareness’s cessation.’ This is the eighth cause and condition that gains knowledge before the religious life is attained and that increases knowledge once it has been attained.
 {:#p85}
 
-86\. “What are eight things to be cultivated? The noble eightfold path: right view, right intention, right speech, right action, right livelihood, right method, right mindfulness, and right samādhi.
+86\. “What are eight things to be cultivated? The noble eightfold path: right view, right intention, right speech, right action, right livelihood, right method, right mindfulness, and right <em>samādhi</em>.
 {:#p86}
 
 87\. “What are eight things to be recognized? The eight ways of the world: profit and decline, criticism and praise, admiration and censure, and pain and pleasure.
 {:#p87}
 
-88\. “What are eight things to be ceased? The eightfold wrong [path]: wrong view, wrong intent, wrong speech, wrong action, wrong livelihood, wrong method, wrong mindfulness, and wrong samādhi.
+88\. “What are eight things to be ceased? The eightfold wrong [path]: wrong view, wrong intention, wrong speech, wrong action, wrong livelihood, wrong method, wrong mindfulness, and wrong <em>samādhi</em>.
 {:#p88}
 
 89\. “What are eight things that retreat? The eight kinds of indolence: What are the eight kinds of indolence? A monk soliciting alms doesn’t get alms. He then thinks, ‘Today, I went to town to solicit alms and didn’t get any. My body feels weak and incapable of sitting in meditation or walking back and forth. Now, I ought to lie down and rest.’ That indolent monk then lies down to rest, refusing to diligently attempt to attain what he has yet to attain, obtain what he has yet to obtain, and realize what he has yet to realize. This is the first indolence.
@@ -396,7 +396,7 @@ The monks accepted his instructions and listened.
 122\. “What are nine things to be achieved? The nine factors of purified cessation: the precepts as a factor of purified cessation, the mind as a factor of purified cessation, views as a factor of purified cessation, going beyond doubt as a factor of purified cessation, discernment as a factor of purified cessation, the path as a factor of purified cessation, elimination as a factor of purified cessation, lacking desire as a factor of purified cessation, and liberation as a factor of purified cessation.
 {:#p122}
 
-123\. “What are nine things to be cultivated? The nine sources of joy: First is joy, second is love, third is delight, fourth is pleasure, fifth is samādhi, sixth is real knowledge, seventh is indifference, eighth is lacking desire, and ninth is liberation.
+123\. “What are nine things to be cultivated? The nine sources of joy: First is joy, second is love, third is delight, fourth is pleasure, fifth is <em>samādhi</em>, sixth is real knowledge, seventh is indifference, eighth is lacking desire, and ninth is liberation.
 {:#p123}
 
 124\. “What are nine things to be recognized? They are the nine abodes of sentient beings. Some sentient beings have diverse bodies and diverse notions. These gods and humans are the first abode of sentient beings. Some sentient beings have diverse bodies but the same notions. When the Brahmas of the Ābhāsvara Heaven are first born there, that’s the second abode of sentient beings. Some sentient beings have the same bodies but diverse notions. This Ābhāsvara Heaven is the third abode of sentient beings. Some sentient beings have the same bodies and the same notions. This Śubhakṛtsnā Heaven is the fourth abode of sentient beings. Some sentient beings lack conception or anything to perceive. This Asāṃjñika Heaven is the fifth abode of sentient beings. Again, some sentient beings dwell in the abode of space, which is the sixth abode of sentient beings. Again, some sentient beings dwell in the abode of awareness, which is the seventh abode of sentient beings. Again, some sentient beings dwell in the abode of nothingness, which is the eighth abode of sentient beings. Again, some sentient beings dwell in the abode with and without conception, which is the ninth abode of sentient beings.
@@ -441,7 +441,7 @@ The monks accepted his instructions and listened.
 137\. “What are nine things to know? The nine various things:[\[11\]](#n11){:#ref11} [1] Various contacts arise because of [2] various [sensory] elements. [3] Various feelings arise because of various contacts. [4] Various concepts arise because of various feelings. [5] Various formations arise because of various concepts. [6] Various desires arise because of various formations.[\[12\]](#n12){:#ref12} [7] Various profits arise because of various desires. [8] Various pursuits arise because of various profits. [9] Various afflictions arise because of various pursuits.
 {:#p137}
 
-138\. “What are nine things to be realized? The nine kinds of cessation: When the first dhyāna is entered, the thorn of sound is ceased. When the second dhyāna is entered, the thorns of perception and examination are ceased. When the third dhyāna is entered, the thorn of joy is ceased. When the fourth dhyāna is entered, the thorn of breathing is ceased. When the abode of space is entered, the thorn of perceiving form is ceased. When the abode of awareness is entered, the thorn of perceiving space is ceased. When the abode of nothingness is entered, the thorn of perceiving awareness is ceased. When the abode with and without conception is entered, the thorn of perceiving nothingness is ceased. When the samādhi of complete cessation is entered, the thorns of conception and feeling are ceased.
+138\. “What are nine things to be realized? The nine kinds of cessation: When the first dhyāna is entered, the thorn of sound is ceased. When the second dhyāna is entered, the thorns of perception and examination are ceased. When the third dhyāna is entered, the thorn of joy is ceased. When the fourth dhyāna is entered, the thorn of breathing is ceased. When the abode of space is entered, the thorn of perceiving form is ceased. When the abode of awareness is entered, the thorn of perceiving space is ceased. When the abode of nothingness is entered, the thorn of perceiving awareness is ceased. When the abode with and without conception is entered, the thorn of perceiving nothingness is ceased. When the <em>samādhi</em> of complete cessation is entered, the thorns of conception and feeling are ceased.
 {:#p138}
 
 139\. “Monks, these ninety things are true and not false. They’ve been known by the Tathāgata who teaches the Dharma equally.
@@ -455,13 +455,13 @@ The monks accepted his instructions and listened.
 141\. “What are ten things to be achieved? The ten ways of salvation: First, a monk is perfect regarding the 250 precepts and perfect in his behavior. He feels great anxiety when he sees a small infraction. He fully learns the precepts, and he doesn’t have any inclination to corruption. Second, he makes good friends. Third, his language is proper, and he has a great deal of patience.[\[13\]](#n13){:#ref13} Fourth, he prefers to pursue the good teaching and disseminates it generously. Fifth, when religious practitioners undertake a task, he immediately goes to help them. He doesn’t regard it as troublesome, deals with difficulties, and instructs others to do the same. Sixth, he’s well-versed, able to retain what he learns, and isn’t ever forgetful. Seventh, he’s diligent in desisting from unskillful qualities and developing skillful qualities. Eighth, he constantly focuses on his own mindfulness without any other ideas, recalling his previous good conduct as though it were right in front of his eyes. Ninth, his wisdom is accomplished. He observes the law of arising and cessation and stops the source of suffering with the noble discipline. Tenth, he’s happy in a secluded dwelling focusing his attention and contemplating, and he isn’t agitated while he meditates.
 {:#p141}
 
-142\. “What are ten things to be cultivated? The ten right practices: right view, right intention, right speech, right action, right livelihood, right method, right samādhi, right liberation, and right knowledge.
+142\. “What are ten things to be cultivated? The ten right practices: right view, right intention, right speech, right action, right livelihood, right method, right mindfulness, right <em>samādhi</em>, right liberation, and right knowledge.
 {:#p142}
 
 143\. “What are ten things to be recognized? The ten physical senses: the eye sense, ear sense, nose sense, tongue sense, body sense, sight sense, sound sense, odor sense, flavor sense, and touch sense.
 {:#p143}
 
-144\. “What are ten things to be ceased? The ten wrong practices: wrong view, wrong intent, wrong speech, wrong action, wrong livelihood, wrong method, wrong samādhi, wrong liberation, and wrong knowledge.
+144\. “What are ten things to be ceased? The ten wrong practices: wrong view, wrong intention, wrong speech, wrong action, wrong livelihood, wrong method, wrong mindfulness, wrong <em>samādhi</em>, wrong liberation, and wrong knowledge.
 {:#p144}
 
 145\. “What are ten things that retreat? The path of ten unskillful actions: Physically killing, stealing, and engaging in sex; verbally being divisive, being abusive, speaking falsely, and speaking frivolously; and mentally being greedy, being jealous, and having wrong view.
@@ -473,13 +473,13 @@ The monks accepted his instructions and listened.
 147\. “What are ten things that are difficult to understand? The ten noble dwellings:[\[14\]](#n14){:#ref14} First, a monk eliminates five limbs. Second, he achieves six limbs. Third, he guards one thing.[\[15\]](#n15){:#ref15} Fourth, he supports four things. Fifth, he ceases heterodox truths. Sixth, he has a surpassing and marvelous pursuit. Seventh, he perceives the unmuddied. Eighth, he has stopped physical conduct. Ninth, his mind is liberated. Tenth, his wisdom is liberated.
 {:#p147}
 
-148\. “What are ten things to produce? The ten points of praise: When a monk has himself attained faith, he teaches it to other people and commends those who’ve attained faith. When he has himself observed precepts, he teaches them to other people and commends those who observe precepts. When he has few desires himself, he teaches it to other people and commends those with few desires. When he is himself satisfied, he teaches it to other people and commends those who are satisfied. When he himself enjoys seclusion, he teaches it to other people and commends those who enjoy seclusion. When he himself has learned much, he teaches it to other people and commends those who learn much. When he has himself made effort, he teaches it to other people and commends those who make effort. When he has himself focused his attention, he teaches it to other people and commends those who focus their attention. When he has himself attained samādhi, he teaches it to other people and commends those who attain samādhi. When he has himself attained wisdom, he teaches it to other people and commends those who attain wisdom.
+148\. “What are ten things to produce? The ten points of praise: When a monk has himself attained faith, he teaches it to other people and commends those who’ve attained faith. When he has himself observed precepts, he teaches them to other people and commends those who observe precepts. When he has few desires himself, he teaches it to other people and commends those with few desires. When he is himself satisfied, he teaches it to other people and commends those who are satisfied. When he himself enjoys seclusion, he teaches it to other people and commends those who enjoy seclusion. When he himself has learned much, he teaches it to other people and commends those who learn much. When he has himself made effort, he teaches it to other people and commends those who make effort. When he has himself focused his attention, he teaches it to other people and commends those who focus their attention. When he has himself attained <em>samādhi</em>, he teaches it to other people and commends those who attain <em>samādhi</em>. When he has himself attained wisdom, he teaches it to other people and commends those who attain wisdom.
 {:#p148}
 
-149\. “What are ten things to know? The ten things to cease: A person of right view ceases wrong view. The numberless evils produced by the conditions of wrong view are all eliminated, and the numberless virtues produced by the causes of right view are all accomplished. Right intent … right speech … right action … right livelihood … right method … right mindfulness … right samādhi … right liberation … right knowledge. A person of right knowledge ceases wrong knowledge. The numberless evils produced by the causes of wrong knowledge are all eliminated, and the numberless virtues produced by the causes of right knowledge are all accomplished.
+149\. “What are ten things to know? The ten things to cease: A person of right view ceases wrong view. The numberless evils produced by the conditions of wrong view are all eliminated, and the numberless virtues produced by the causes of right view are all accomplished. Right intention … right speech … right action … right livelihood … right method … right mindfulness … right <em>samādhi</em> … right liberation … right knowledge. A person of right knowledge ceases wrong knowledge. The numberless evils produced by the causes of wrong knowledge are all eliminated, and the numberless virtues produced by the causes of right knowledge are all accomplished.
 {:#p149}
 
-150\. “What are ten things to be realized? The ten ways of an adept: right view, right intention, right speech, right action, right livelihood, right method, right samādhi, right liberation, and right knowledge.
+150\. “What are ten things to be realized? The ten ways of an adept: right view, right intention, right speech, right action, right livelihood, right method, right <em>samādhi</em>, right liberation, and right knowledge.
 {:#p150}
 
 151\. “Monks, these hundred things are true and not false. They’ve been known by the Tathāgata who teaches the Dharma equally.”
