--- a/01_agama/madhyama/MA_004.md
+++ b/01_agama/madhyama/MA_004.md
@@ -113,7 +113,7 @@ The monks then accepted the teaching and listened.
 27\. “I had said, ‘I will explain the seven people in water for you,’ and so I have explained it.”
 {: #p27}
 
-28\. Thus did the Buddha speak. Those monks who heard what the Buddha taught rejoiced and approved.
+28\. This is what the Buddha said. Those monks who heard what the Buddha taught rejoiced and approved.
 {: #p28}
 
 ---
