--- a/01_agama/madhyama/MA_005.md
+++ b/01_agama/madhyama/MA_005.md
@@ -165,7 +165,7 @@ The monks then answered, “We see it, Bhagavān!”
 46\. When he spoke this teaching, the contaminants ended for sixty monks, and they were freed from the bonds. Sixty monks renounced the precepts and returned home. Why is that? The Bhagavān’s instructions were too profound and difficult, and so was the path of training.
 {: #p46}
 
-47\. Thus did the Buddha speak. Those monks who heard what the Buddha taught rejoiced and approved.
+47\. This is what the Buddha said. Those monks who heard what the Buddha taught rejoiced and approved.
 {: #p47}
 
 ---
