--- a/01_agama/madhyama/MA_006.md
+++ b/01_agama/madhyama/MA_006.md
@@ -86,7 +86,7 @@ The monks then accepted the teaching and listened.
 19\. “I had said, ‘I will explain the seven places to which a good person goes and nirvāṇa without remainder,’ and so I have explained it.”
 {: #p19}
 
-20\. Thus did the Buddha speak. Those monks who heard what the Buddha taught rejoiced and approved.
+20\. This is what the Buddha said. Those monks who heard what the Buddha taught rejoiced and approved.
 {: #p20}
 
 ---
