--- a/01_agama/madhyama/MA_007.md
+++ b/01_agama/madhyama/MA_007.md
@@ -83,7 +83,7 @@ Lead to a marvelous place;\\
 They’re like those rivers\\
 Flowing into the ocean.”
 
-17\. Thus did the Buddha speak. The Venerable Mahācunda and the monks who heard what the Buddha taught rejoiced and approved.
+17\. This is what the Buddha said. The Venerable Mahācunda and the monks who heard what the Buddha taught rejoiced and approved.
 {:#p17}
 
 ---
