--- a/01_agama/madhyama/MA_008.md
+++ b/01_agama/madhyama/MA_008.md
@@ -93,7 +93,7 @@ next: MA_009.html
 26\. “Monks, now I have arisen in the world as a Tathāgata, Arhat, and Completely Awakened One, Accomplished in Knowledge and Conduct, Well Gone, Understander of the World, Trainer in the Way and Teaching, Teacher of Gods and People, and I’m called a Buddha and a Bhagavān. Now, I benefit myself, benefit others, benefit many people, pity the world, seek both meaning and benefit for gods and humans, and seek peace and happiness. Now, I explain a teaching that reaches the ultimate, that’s ultimately clean, that’s the ultimate religious practice, and that’s the ultimate completion of the religious life. Now, I’ve parted with birth, old age, illness, death, lamentation, and grief, and I’ve been freed from all suffering.”
 {:#p26}
 
-27\. Thus did the Buddha speak. Those monks who heard what the Buddha had taught rejoiced and approved.
+27\. This is what the Buddha said. Those monks who heard what the Buddha had taught rejoiced and approved.
 {:#p27}
 
 ---
