--- a/01_agama/madhyama/MA_010.md
+++ b/01_agama/madhyama/MA_010.md
@@ -125,7 +125,7 @@ next: MA_011.html
 32\. “Monks, suppose someone sets out to stop the contaminants by seeing, and they are stopped because of seeing … to stop the contaminants by guarding, and they are stopped because of guarding … to stop the contaminants by avoiding, and they are stopped because of avoiding … to stop the contaminants by using, and they are stopped because of using … to stop the contaminants by tolerating, and they are stopped because of tolerating … to stop the contaminants by removing, and they are stopped because of removing … to stop the contaminants by contemplating, and they are stopped because of contemplating. This is called a monk who was once bound by all the contaminants and who’s now free. He can reach the end of suffering with right knowledge.”
 {:#p32}
 
-33\. Thus did the Buddha speak. The monks who heard what the Buddha taught rejoiced and approved.
+33\. This is what the Buddha said. The monks who heard what the Buddha taught rejoiced and approved.
 {:#p33}
 
 ---
