--- a/01_agama/madhyama/MA_011.md
+++ b/01_agama/madhyama/MA_011.md
@@ -83,7 +83,7 @@ next: MA_012.html
 22\. “Thus is someone who performs a deed that’s not good and will surely receive a painful result, a reward in the present life. How does a person perform a deed that’s not good and will surely receive a painful result, a reward in the present life? It means that this person has cultivated themselves. They have cultivated the precepts, cultivated their mind, and cultivated wisdom. Their life span will be very long. This is called a person who performs a deed that’s not good and will surely receive a painful result, a reward in the present life. In the present life, if he receives the rewards of good and bad deeds, they will be slight.”
 {:#p22}
 
-23\. Thus did the Buddha speak. Those monks who heard what the Buddha taught rejoiced and approved.
+23\. This is what the Buddha said. Those monks who heard what the Buddha taught rejoiced and approved.
 {:#p23}
 
 ---
