--- a/01_agama/madhyama/MA_015.md
+++ b/01_agama/madhyama/MA_015.md
@@ -14,10 +14,10 @@ next: MA_016.html
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha traveled to Śrāvastī and stayed at Anāthapiṇḍada’s Park in Jeta’s Grove.
 {: #p1}
 
-2\. It was then that the Bhagavān addressed the monks, “If an deed is done intentionally, I say that person is sure to experience its result, whether in the present life or a later life. If an deed is done unintentionally, I say it’s not sure that they’ll experience its result.
+2\. It was then that the Bhagavān addressed the monks, “If a deed is done intentionally, I say that person is sure to experience its result, whether in the present life or a later life. If a deed is done unintentionally, I say it’s not sure that they’ll experience its result.
 {: #p2}
 
-3\. “Someone who intentionally does three physical deeds that are unskillful with painful effects will experiences painful results … four verbal deeds … three mental deeds that are unskillful with painful effects will experience painful results.
+3\. “Someone who intentionally does three physical deeds that are unskillful with painful effects will experience painful results … four verbal deeds … three mental deeds that are unskillful with painful effects will experience painful results.
 {: #p3}
 
 4\. “What are the three intentional physical deeds that are unskillful with painful effects and bring painful results? First is killing beings. The height of evil is drinking blood, desiring to injure, and being unkind to sentient beings, even if they’re insects and worms.
@@ -47,7 +47,7 @@ next: MA_016.html
 12\. “These are known as the four intentional verbal deeds that are unskillful with painful effects and bring painful results.
 {: #p12}
 
-13\. “What are the three intentional mental deeds that are unskillful with painful effects and bring painful results? First is covetousness. Seeing another’s valuables and essentials for living, a person constantly pursues, hopes, and wishes, Let me obtain them.’
+13\. “What are the three intentional mental deeds that are unskillful with painful effects and bring painful results? First is covetousness. Seeing another’s valuables and essentials for living, a person constantly pursues, hopes, and wishes, ‘Let me obtain them.’
 {: #p13}
 
 14\. “Second is animosity. Bearing hatred in their mind, a person thinks, ‘That sentient being should be killed, bound, arrested, avoided, or chased away.’ That desire causes them to experience measureless suffering.
@@ -93,10 +93,10 @@ The monks answered, “No, Bhagavān. Why is that? They wouldn’t commit bad de
 26\. “Therefore, this man or woman, whether living at home or having left home, will always diligently cultivate the liberation of equanimity. If that man or woman, whether living at home or having left home, cultivates the liberation of equanimity, they won’t keep this body when they go to another life. They’ll depart from here just according to their minds.
 {: #p26}
 
-27\. “A monk should think, ‘I’ve been careless in the past and committed unskillful deeds. I might experience the results of all of them in the present instead or in a later life.’ If he thus practices the liberation of equanimity and [his mind becomes] measureless and well cultivated, he’ll surely become a non-returner or reach a higher attainment.
+27\. “A monk should think, ‘I’ve been careless in the past and committed unskillful deeds. I might experience the results of all of them in the present instead or in a later life.’ If he thus practices the liberation of equanimity and [his mind becomes] measureless and well cultivated, he’ll surely become a non-returner or reach a higher attainment.”
 {: #p27}
 
-28\. Thus did Buddha speak. Those monks who heard what the Buddha had taught rejoiced and approved.
+28\. This is what the Buddha said. Those monks who heard what the Buddha had taught rejoiced and approved.
 {: #p28}
 
 ---
