--- a/01_agama/madhyama/MA_016.md
+++ b/01_agama/madhyama/MA_016.md
@@ -132,7 +132,7 @@ next: MA_017.html
 37\. “Gautama, we’ve realized it. Sugata, we’ve understood it. Bhagavān, we all take refuge in the Buddha, Dharma, and the Saṅgha of monks. Please let the Bhagavān accept us as laymen. Starting today, they will be our refuge for the rest of our lives.”
 {:#p37}
 
-33\. Thus did the Buddha speak. All the Kālāmas and the monks who heard what the Buddha taught rejoiced and approved.
+33\. This is what the Buddha said. All the Kālāmas and the monks who heard what the Buddha taught rejoiced and approved.
 {:#p33}
 
 ---
