--- a/01_agama/madhyama/MA_055.md
+++ b/01_agama/madhyama/MA_055.md
@@ -160,7 +160,7 @@ They answered, “Liberation is its cultivation.”
 31\. “By cultivating suffering, there is faith. Cultivating faith, there is right thinking. Cultivating right thinking, there is right mindfulness and right knowledge. Cultivating right mindfulness and right knowledge, there is guarding one’s faculties. Cultivating guarding one’s faculties … guarding the precepts … having no regrets … gladness … joy … calmness … happiness … samādhi … true seeing and true knowing … disillusionment … lack of desire … liberation. Cultivating liberation, there is nirvāṇa.”
 {: #p31}
 
-32\. Thus did the Buddha speak. The monks who heard what the Buddha taught rejoiced and approved.
+32\. This is what the Buddha said. The monks who heard what the Buddha taught rejoiced and approved.
 {: #p32}
 
 ---
