--- a/01_agama/madhyama/MA_057.md
+++ b/01_agama/madhyama/MA_057.md
@@ -50,7 +50,7 @@ next: MA_058.html
 13\. “If a monk gets the notion of impermanence, he’ll surely get the notion of selflessness. If a monk gets the notion of selflessness, then he’ll end all self-pride. Right here in the present, he’ll attain his rest, cessation, ending, the unconditioned, and <em>nirvāṇa</em>.”
 {:#p13}
 
-14\. Thus did the Buddha speak. Those monks who heard what the Buddha taught rejoiced and approved.
+14\. This is what the Buddha said. Those monks who heard what the Buddha taught rejoiced and approved.
 {:#p14}
 
 ---
