--- a/01_agama/madhyama/MA_083.md
+++ b/01_agama/madhyama/MA_083.md
@@ -82,7 +82,7 @@ Venerable Maudgalyāyana said to the Bhagavān, “Indeed, Bhagavān!”
 23\. “Mahāmaudgalyāyana, such a monk can reach the ultimate, which is the ultimate purity, ultimate religious practice, and ultimate end of the religious practice.”
 {:#p23}
 
-24\. Thus did the Buddha speak. When Venerable Mahāmaudgalyāyana heard what the Buddha taught, he rejoiced and approved.
+24\. This is what the Buddha said. When Venerable Mahāmaudgalyāyana heard what the Buddha taught, he rejoiced and approved.
 {:#p24}
 
 ---
