--- a/01_agama/madhyama/MA_085.md
+++ b/01_agama/madhyama/MA_085.md
@@ -82,7 +82,7 @@ The monks then accepted the teaching and listened.
 23\. “Monks, this is the way of a genuine person and the way of a disingenuous person. All of you should know the way of a genuine person and the way of a disingenuous person. Once you know the way of a genuine person and the way of a disingenuous person, discard the way of a disingenuous person and train in the way of a genuine person. You should train in this way.”
 {:#p23}
 
-24\. Thus did the Buddha speak. Those monks who heard what the Buddha taught rejoiced and approved.
+24\. This is what the Buddha said. Those monks who heard what the Buddha taught rejoiced and approved.
 {:#p24}
 
 * {:.verse}The noble, handsome, and eloquent,\\
