--- a/01_agama/madhyama/MA_092.md
+++ b/01_agama/madhyama/MA_092.md
@@ -59,7 +59,7 @@ next: MA_095.html
   </tr>
   <tr>
     <td class="ch" title='t125.2.575a16'>佛說如是。 尊者阿難及諸比丘聞佛所說歡喜，奉行。</td>
-    <td id='p12'>12. Thus did the Buddha speak. Venerable Ānanda and the monks who heard what the Buddha taught rejoiced and approved.</td>
+    <td id='p12'>12. This is what the Buddha said. Venerable Ānanda and the monks who heard what the Buddha taught rejoiced and approved.</td>
   </tr>
   <tr>
     <td class="ch" title='t125.2.575a18'>青白蓮華喻經 第六竟 (七百三字)</td>
