--- a/01_agama/madhyama/MA_176.md
+++ b/01_agama/madhyama/MA_176.md
@@ -201,7 +201,7 @@ next: MA_186.html
 61\. “The world in truth has these four kinds of meditators, and that’s the reason I’ve explained it.”
 {:#p61}
 
-62\. Thus did the Buddha speak. Those monks who heard what the Buddha taught rejoiced and approved.
+62\. This is what the Buddha said. Those monks who heard what the Buddha taught rejoiced and approved.
 {:#p62}
 
 ---
