--- a/01_agama/madhyama/MA_210.md
+++ b/01_agama/madhyama/MA_210.md
@@ -253,7 +253,7 @@ The nun Dharmadinnā answered, “Madam, you’re asking about an endless subjec
 42\. “Nun, if the laywoman Viśākhā had come to ask me about this phrase or that expression, I would’ve answered her with these meanings using those phrases and expressions. Nun, this doctrine is as you’ve explained it. You should thus retain it. Why is that? Because these explanations are the doctrine.”
 {:#p42}
 
-43\. Thus did the Buddha speak. The nun Dharmadinnā and the monks who heard what the Buddha taught rejoiced and approved.
+43\. This is what the Buddha said. The nun Dharmadinnā and the monks who heard what the Buddha taught rejoiced and approved.
 {:#p43}
 
 ---
